--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -98,7 +98,9 @@ p {
 }
 
 footer p {
-  color: #f2f2f2;
+  color: #fff;
+ 
+  
 }
 
 a {
@@ -118,7 +120,34 @@ a {
   -ms-transition: text-shadow 0.5s ease;
 }
 
-a:hover, a:focus {text-decoration: underline;}
+a:link {text-decoration:none;}
+a:visited {text-decoration:none;}
+
+#main_content a:hover {
+
+}
+
+footer a:link {
+  color: #051854;
+
+}
+footer a:visited {
+  color: #051854;
+
+}
+
+footer a:hover {
+  color: #fff;
+
+}
+
+em {
+  font-style: italic;
+}
+
+strong {
+  font-weight: bold;
+}
 
 footer a {
   color: #F2F2F2;
@@ -139,13 +168,7 @@ img {
   max-width: 739px;
   padding: 5px;
   margin: 10px 0 10px 0;
-  border: 1px solid #ebebeb;
 
-  box-shadow: 0 0 5px #ebebeb;
-  -webkit-box-shadow: 0 0 5px #ebebeb;
-  -moz-box-shadow: 0 0 5px #ebebeb;
-  -o-box-shadow: 0 0 5px #ebebeb;
-  -ms-box-shadow: 0 0 5px #ebebeb;
 }
 
 p img {
@@ -264,8 +287,8 @@ Full-Width Styles
 
 .inner {
   position: relative;
-  max-width: 640px;
-  padding: 20px 10px;
+  max-width: 1000px;
+  padding: 10px 10px;
   margin: 0 auto;
 }
 
@@ -273,24 +296,20 @@ Full-Width Styles
   display: block;
   position: absolute;
   top:0;
-  right: 10px;
+  right: -50px;
   z-index: 10;
   padding: 10px 50px 10px 10px;
   color: #fff;
-  background: url('../images/blacktocat.png') #0090ff no-repeat 95% 50%;
   font-weight: 700;
-  box-shadow: 0 0 10px rgba(0,0,0,.5);
-  border-bottom-left-radius: 2px;
-  border-bottom-right-radius: 2px;
+
 }
 
 #header_wrap {
-  background: #212121;
-  background: -moz-linear-gradient(top, #373737, #212121);
-  background: -webkit-linear-gradient(top, #373737, #212121);
-  background: -ms-linear-gradient(top, #373737, #212121);
-  background: -o-linear-gradient(top, #373737, #212121);
-  background: linear-gradient(top, #373737, #212121);
+  background: url('../images/newglobe.jpg')  no-repeat ;
+  background-position: center top;
+  background-size: 1300px;
+  height: 250px;
+
 }
 
 #header_wrap .inner {
@@ -298,7 +317,7 @@ Full-Width Styles
 }
 
 #project_title {
-  margin: 0;
+  margin: -50px;
   color: #fff;
   font-size: 42px;
   font-weight: 700;
@@ -352,6 +371,51 @@ Full-Width Styles
   background: url(../images/sprite_download.png) no-repeat top right;
 }
 
+nav{
+color:#051854;
+background:#fff;
+width:100%;
+position:relative;
+z-index:1000;
+text-align:center;
+height:40px;
+-webkit-box-shadow:0px 3px 3px 0px rgba(0,0,0,0.3);
+box-shadow:0px 3px 3px 0px rgba(0,0,0,0.3)}
+
+nav ul{
+padding-top:10px}
+
+nav ul li{
+display:inline;
+border-right:1px solid #fff;
+padding:6px 30px 8px 30px;
+margin:0}
+
+nav ul li:first-child{
+border-left:1px solid #fff}
+
+nav a{
+font-family:'Source Sans Pro', sans-serif;
+font-size:16px;
+color:#051854;
+font-weight:300;
+text-decoration:none;
+text-transform:uppercase}
+
+
+}
+
+
+
+nav a:visited{
+color:#051854}
+
+nav a:hover{
+  color: #0069ba;
+  text-shadow: #0090ff 0px 0px 2px;
+}
+
+
 #main_content_wrap {
   background: #f2f2f2;
   border-top: 1px solid #111;
@@ -362,8 +426,27 @@ Full-Width Styles
   padding-top: 40px;
 }
 
+#footer_wrap2 {
+  background: #051854;
+  
+
+  
+}
+#footer_wrap2 .inner {
+  
+
+ 
+}
+
 #footer_wrap {
-  background: #212121;
+  background: #C8C8C8;
+
+
+  
+}
+#footer_wrap .inner {
+  padding: 0px 10px 30px 10px;
+
 }
 
 
