--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -14,7 +14,7 @@
     <script type="text/javascript" src="javascripts/tabber.js">
 </script>
 
-    <title>{ page.title }}</title>
+    <title>{{ page.title }}</title>
   </head>
 
   <body>
