--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -24,7 +24,7 @@
         <header class="inner">
           <a id="forkme_banner" href="http://www.commerce.gov">A bureau within the U.S. Department of Commerce</a>
 
-          <a id="project_title" href="http://trade.gov"><img  src="images/logo.png" width="300px" ></a>
+          <a id="project_title" href="/tradegov/"><img  src="images/logo.png" width="300px" ></a>
 
           <h2 id="project_tagline"></h2>
           
