--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -74,9 +74,6 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
 
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a></h3>
-
 <p>{{ content }}</p>
 
 <script>
@@ -100,7 +97,7 @@
 
   ready = function() {
     var url;
-    url = 'http://api.trade.gov/trade_articles/search?q=China&evergreen=true';
+    url = 'http://api.trade.gov/trade_articles/search?q=Minneapolis&evergreen=true';
     return $.getJSON(url, renderData);
   };
 
