--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -97,7 +97,7 @@
 
   ready = function() {
     var url;
-    url = 'http://api.trade.gov/trade_articles/search?q=Minneapolis&evergreen=true';
+    url = 'http://api.trade.gov/trade_articles/search?callback=?';
     return $.getJSON(url, renderData);
   };
 
